# repoverlay

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV.md  README.md  build.rs  cliff.toml  codecov.yml  deny.toml  dist-workspace.toml  hk.pkl  justfile  release-plz.toml  rust-toolchain.toml
.claude/: settings.json
.claude/skills/release/: SKILL.md
.claude/skills/test/: SKILL.md
.github/actions/install-tools/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: audit.yml  build.yml  ci.yml  commit-lint.yml  coverage.yml  pr.yml  release-plz.yml  release.yml  tag-release.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style.md  multi-source-implementation-progress.md  project_overview.md  suggested_commands.md
docs/: cli-reference.md
docs/adr/: 0001-git-cli-over-git-library.md  0002-keep-apply-and-switch-commands.md
docs/plans/: 2025-01-21-simplified-publish-workflow-design.md  2026-01-21-selection-ui-design.md  2026-01-30-cli-simplification-plan.md  2026-01-30-multi-source-sharing-design.md  2026-01-30-multi-source-sharing-prompt.md  2026-01-30-repoverlay-talk-outline.md  2026-01-30-repoverlay-talk-slides.md
metrics/: binary-size.txt  bloat.txt
scripts/: generate-cliff-configs.py
src/: CLAUDE.md  cache.rs  cli.rs  config.rs  detection.rs  github.rs  lib.rs  main.rs  overlay_repo.rs  selection.rs  sources.rs  state.rs  testutil.rs  upstream.rs
tests/: cli.rs  integration_tests.rs  tests.rs  unit_tests.rs
tests/common/: mod.rs
tests/integration/: apply.rs  create.rs  mod.rs  remove.rs  restore.rs  status.rs  switch.rs  update.rs  upstream.rs
tests/unit/: mod.rs  remove_section.rs
