[package]
name = "repoverlay"
version = "0.1.5"
edition = "2024"
description = "Overlay config files into git repositories without committing them"
license = "MIT"
repository = "https://github.com/tylerbutler/repoverlay"
homepage = "https://github.com/tylerbutler/repoverlay"
keywords = ["git", "overlay", "config", "symlink"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "repoverlay"
path = "src/lib.rs"

[[bin]]
name = "repoverlay"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2"
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.100"
colored = "3"
url = "2"
directories = "5"
dialoguer = "0.11"
sickle = { version = "0.1.2", features = ["serde"] }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
